# sensorfusion

./: calibration_result.json  calibration_result_20240827-133648.json  calibration_result_20240827-133658.json  calibration_result_20240827-133708.json  calibration_result_20240827-133718.json  calibration_result_20240827-133728.json  calibration_result_20240827-133748.json  calibration_result_20240827-133758.json  calibration_result_20240827-133830.json  can_data.csv  combined_data_with_bits_and_64bit.csv  frames_2024-07-02_16.12.26.gv  parsed_data.csv
build_ros_flask_gps/ros_flask_gps/: colcon_command_prefix_build.sh.env
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_extrinsic_calibration/share/camera_extrinsic_calibration/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/radar_visualization_node/share/radar_visualization_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install_ros_flask_gps/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
master/: external_calibration_node(not exakt).py  external_calibration_node(not exakt2).py  radar_node(can_data_visualisation).py  radar_node(x,y,z).py
master/141024_recorder/: sensor_data_recorder.py
master/151024/: data_visualization_node.py
master/161024/: sensor_data_recorder.py
master/170924/: camera_node.py  sensor_fusion_node.py
master/210824/: camera_node.py  radar_node.py
master/220824/: camera_extrinsic_calibration_node.py  external_calibration_node.py  radar_node (2d,3d).py  radar_node.py
master/230824/: external_calibration_node.py  radar_node.py
master/240824/: external_calibration_node.py  radar_node(3d).py
master/260824/: external_calibration_node.py
master/270824/: camera_extrinsic_calibration_node.py  external_calibration_node.py  radar_node.py
master/270824(extern_Kali)/: camera_node.py
master/280824/: external_calibration_node.py
src/camera_extrinsic_calibration/: setup.cfg  setup.py
src/camera_extrinsic_calibration/camera_extrinsic_calibration/: camera_extrinsic_calibration_node.py
src/data_visualization/: package.xml  setup.cfg  setup.py
src/data_visualization/data_visualization/: data_visualization_node.py
src/log/: latest_list
src/my_camera_pkg/: package.xml  setup.py
src/my_camera_pkg/my_camera_pkg/: calibration_result.npz
src/my_launch_pkg/: package.xml  setup.cfg  setup.py
src/my_launch_pkg/launch/: my_launch_file.py
src/radar_package/: package.xml  setup.cfg  setup.py
src/radar_visualization_node/: setup.cfg  setup.py
src/radar_visualization_node/radar_visualization_node/: radar_visualization.py
src/sensor_calibration/: setup.cfg  setup.py
src/sensor_calibration/sensor_calibration/: external_calibration_node.py
src/sensor_data/sensor_data_20241014_161139/: radar_data.json
src/sensor_data/sensor_data_20241014_174502/: radar_data.json
src/sensor_data_recorder/: package.xml  setup.cfg  setup.py
src/sensor_fusion_pkg/: calibration_result_20240827-133738.json  package.xml  setup.py
src/sensor_fusion_pkg/sensor_fusion_pkg/: sensor_fusion_node.py
trash/: camera_node.py
(+50 files in other folders)
